(#138) MessageArchive: include the frontend into web server build

--- a/Emulsion.MessageArchive.Frontend/index.html
+++ b/Emulsion.MessageArchive.Frontend/index.html
@@ -1,7 +1,7 @@
 ﻿<html lang="en">
 <head>
     <title>Emulsion Message Archive</title>
-    <script src="app.js"></script>
+    <script type="module" src="./app.tsx"></script>
 </head>
 
 <div id="app"></div>
