(#138) MessageArchive: support proper logs

--- a/Emulsion.MessageArchive.Frontend/index.html
+++ b/Emulsion.MessageArchive.Frontend/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Emulsion Message Archive</title>
     <script type="module" src="./app.tsx"></script>
+    <link rel="stylesheet" href="./style.less" />
 </head>
 
 <div id="app"></div>
